--- a/8760_code_outline.ipynb
+++ b/8760_code_outline.ipynb
@@ -482,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print both results all pretty like"
+    "Print all  results "
    ]
   },
   {
