--- a/8760_code_outline.ipynb
+++ b/8760_code_outline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "'C:\\\\Users\\\\Nolan Welsh\\\\code-projects\\\\load-8760\\\\5pctCapShort.csv'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,13 +410,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Separate time into hour, day, and month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'RangeIndex' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mday\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m x: x\u001b[38;5;241m.\u001b[39mday)\n\u001b[0;32m     11\u001b[0m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmonth\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m x: x\u001b[38;5;241m.\u001b[39mmonth)\n\u001b[1;32m---> 13\u001b[0m data\u001b[38;5;241m=\u001b[39m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTime\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m data\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'RangeIndex' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert time to hour, day, and month\n",
+    "\n",
+    "#Reset Index \n",
+    "data=data.reset_index()\n",
+    "\n",
+    "\n",
+    "data[\"Time\"] = pd.to_datetime(data[\"Time\"])\n",
+    "\n",
+    "data[\"hour\"] = data['Time'].map(lambda x: x.hour)\n",
+    "data[\"day\"] = data['Time'].map(lambda x: x.day)\n",
+    "data[\"month\"] = data['Time'].map(lambda x: x.month)\n",
+    "\n",
+    "data=data.index([\"Time\"])\n",
+    "\n",
+    "data.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Calculation \n",
     "Since the data is loaded, we are going to filer the amount of hours were capacity shortage > 0 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +468,7 @@
        "721"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +506,7 @@
        "789"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
