--- a/8760_code_multiple_csvs.ipynb
+++ b/8760_code_multiple_csvs.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 8760 Load Analysis \n",
     "## Purpose\n",
-    "The goal of this code is to take 8760 .csv files from electrical system and analyze when and where the load is not being met. It was specifically designed with the output from the HOMER microgrid software in mind. "
+    "The goal of this code is to take 8760 .csv files from electrical systems and analyze when and where the load is not being met. It was specifically designed with the output from the HOMER microgrid software in mind. "
    ]
   },
   {
