update to reflect new stuff on SAIDI and SAIFI

--- a/8760_code_multiple_csvs.ipynb
+++ b/8760_code_multiple_csvs.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1426,9 +1426,6 @@
     "    outages_day = unmet_load_df.groupby(['month', 'day']).apply(count_consecutive_groups).reset_index()\n",
     "    outages_day.columns = ['month','day','#_of_outages']\n",
     "\n",
-    "    #calculate annual SAIDI, SAIFI Indecs \n",
-    "    saidi = hours_unmet_load/no_customers\n",
-    "    saifi = outages_year/no_customers\n",
     "\n",
     "    #save heatmap for each file\n",
     "    plot_yearly_heatmap(outages_day)\n",
@@ -1438,11 +1435,10 @@
     "         'File': os.path.basename(data_path),\n",
     "        'Hours with Capacity Shortage': hours_shortage,\n",
     "        'Hours with Battery <30%': hours_battery_shortage,\n",
-    "        'Hours with Unmet Load': hours_unmet_load,\n",
+    "        'SAIDI (hrs outages/year)': hours_unmet_load,\n",
     "        'Days with Outages': num_days_outages,\n",
-    "        'Total Outages (#/year)': outages_year,\n",
-    "        'SAIDI (hrs/year)' : saidi,\n",
-    "        'SAIFI (#/year)' : saifi\n",
+    "        'SAIFI (outages/year)': outages_year,\n",
+    "      \n",
     "    })\n",
     "\n",
     "    #Merge hours_per_day and outages_day data frames\n",
