Updated GUI , Currently stuck in folder loop

--- a/8760_code_GUI.ipynb
+++ b/8760_code_GUI.ipynb
@@ -135,87 +135,96 @@
     "    \n",
     "    \n",
     "\n",
-    "#list to store all results\n",
+    "    #list to store all results\n",
     "\n",
-    "results = []\n",
-    "outages_summary=[]\n",
+    "    results = []\n",
+    "    outages_summary=[]\n",
     "\n",
     "\n",
-    "for data_path in data_files:\n",
-    "    data = pd.read_csv(\n",
-    "        data_path,\n",
-    "        delimiter=',',\n",
-    "        header= 0,\n",
-    "        index_col='Time',\n",
-    "        skiprows=1)\n",
-    "     \n",
-    "    data= data[data.index.notnull()]\n",
+    "    for data_path in data_files:\n",
+    "        data = pd.read_csv(\n",
+    "            data_path,\n",
+    "            delimiter=',',\n",
+    "            header= 0,\n",
+    "            index_col='Time',\n",
+    "            skiprows=1)\n",
+    "        \n",
+    "        data= data[data.index.notnull()]\n",
     "\n",
-    "    data=data.reset_index() #Reset Index\n",
-    "    data[\"Time\"] = pd.to_datetime(data[\"Time\"])\n",
-    "    data[\"hour\"] = data['Time'].map(lambda x: x.hour)\n",
-    "    data[\"day\"] = data['Time'].map(lambda x: x.day)\n",
-    "    data[\"month\"] = data['Time'].map(lambda x: x.month)\n",
+    "        data=data.reset_index() #Reset Index\n",
+    "        data[\"Time\"] = pd.to_datetime(data[\"Time\"])\n",
+    "        data[\"hour\"] = data['Time'].map(lambda x: x.hour)\n",
+    "        data[\"day\"] = data['Time'].map(lambda x: x.day)\n",
+    "        data[\"month\"] = data['Time'].map(lambda x: x.month)\n",
+    "        \n",
+    "\n",
+    "        #Initialize N/A\n",
+    "        hours_shortage = '0'\n",
+    "        hours_battery_shortage = '0'\n",
+    "        hours_unmet_load = '0' \n",
+    "        num_days_outages = '0' \n",
+    "        outages_year = '0' \n",
+    "        # filter  how many hours load not met (capacity shortage > 0)\n",
+    "        if 'Capacity Shortage' in data.columns:\n",
+    "            data['Capacity Shortage'] = data['Capacity Shortage'].astype(float) #first need to force column to convert to float \n",
+    "            capacity_shortage_df = data[data['Capacity Shortage'] > 0 ]\n",
+    "            hours_shortage = len(capacity_shortage_df)\n",
     "    \n",
     "\n",
-    "     #Initialize N/A\n",
-    "    hours_shortage = '0'\n",
-    "    hours_battery_shortage = '0'\n",
-    "    hours_unmet_load = '0' \n",
-    "    num_days_outages = '0' \n",
-    "    outages_year = '0' \n",
-    "    # filter  how many hours load not met (capacity shortage > 0)\n",
-    "    if 'Capacity Shortage' in data.columns:\n",
-    "        data['Capacity Shortage'] = data['Capacity Shortage'].astype(float) #first need to force column to convert to float \n",
-    "        capacity_shortage_df = data[data['Capacity Shortage'] > 0 ]\n",
-    "        hours_shortage = len(capacity_shortage_df)\n",
-    "   \n",
+    "        #Calculate how many hours annual load is unmet   #for Battery <30%\n",
+    "        if 'Generic 1kWh Li-Ion State of Charge' in data.columns:\n",
+    "            data['Generic 1kWh Li-Ion State of Charge'] = data['Generic 1kWh Li-Ion State of Charge'].astype(float)\n",
+    "            battery_shortage_df = data[data['Generic 1kWh Li-Ion State of Charge'] < 30 ]\n",
+    "            hours_battery_shortage = len(battery_shortage_df)\n",
     "\n",
-    "    #Calculate how many hours annual load is unmet   #for Battery <30%\n",
-    "    if 'Generic 1kWh Li-Ion State of Charge' in data.columns:\n",
-    "        data['Generic 1kWh Li-Ion State of Charge'] = data['Generic 1kWh Li-Ion State of Charge'].astype(float)\n",
-    "        battery_shortage_df = data[data['Generic 1kWh Li-Ion State of Charge'] < 30 ]\n",
-    "        hours_battery_shortage = len(battery_shortage_df)\n",
-    "\n",
-    "    # To find hours with Unmet Electrical Load\n",
-    "    if 'Unmet Electrical Load' in data.columns:\n",
-    "        data['Unmet Electrical Load'] = data['Unmet Electrical Load'].astype(float)\n",
-    "        unmet_load_df = data[data['Unmet Electrical Load'] > 0.01 ]\n",
-    "        hours_unmet_load = len(unmet_load_df)\n",
-    "    \n",
-    "    hours_per_day = unmet_load_df.groupby(['month','day']).size().reset_index()\n",
-    "    hours_per_day.columns=['month','day','hours_with_unmet_load']\n",
-    "    #Calculate number of days with outages \n",
-    "    num_days_outages = len(hours_per_day)\n",
-    "    # Calulate number of outages per year\n",
-    "    outages_year = count_consecutive_groups (unmet_load_df)\n",
-    "    #Calculate number of distinct outages \n",
-    "    outages_day = unmet_load_df.groupby(['month', 'day']).apply(count_consecutive_groups).reset_index()\n",
-    "    outages_day.columns = ['month','day','#_of_outages']\n",
+    "        # To find hours with Unmet Electrical Load\n",
+    "        if 'Unmet Electrical Load' in data.columns:\n",
+    "            data['Unmet Electrical Load'] = data['Unmet Electrical Load'].astype(float)\n",
+    "            unmet_load_df = data[data['Unmet Electrical Load'] > 0.01 ]\n",
+    "            hours_unmet_load = len(unmet_load_df)\n",
+    "        \n",
+    "        hours_per_day = unmet_load_df.groupby(['month','day']).size().reset_index()\n",
+    "        hours_per_day.columns=['month','day','hours_with_unmet_load']\n",
+    "        #Calculate number of days with outages \n",
+    "        num_days_outages = len(hours_per_day)\n",
+    "        # Calulate number of outages per year\n",
+    "        outages_year = count_consecutive_groups (unmet_load_df)\n",
+    "        #Calculate number of distinct outages \n",
+    "        outages_day = unmet_load_df.groupby(['month', 'day']).apply(count_consecutive_groups).reset_index()\n",
+    "        outages_day.columns = ['month','day','#_of_outages']\n",
     "\n",
     "\n",
-    "    #save heatmap for each file\n",
-    "    plot_yearly_heatmap(outages_day)\n",
+    "        #save heatmap for each file\n",
+    "        plot_yearly_heatmap(outages_day)\n",
     "\n",
-    "    #complile a list of results for summary \n",
-    "    results.append ({\n",
-    "         'File': os.path.basename(data_path),\n",
-    "        'Hours with Capacity Shortage': hours_shortage,\n",
-    "        'Hours with Battery <30%': hours_battery_shortage,\n",
-    "        'SAIDI (hrs outages/year)': hours_unmet_load,\n",
-    "        'Days with Outages': num_days_outages,\n",
-    "        'SAIFI (outages/year)': outages_year,\n",
-    "      \n",
-    "    })\n",
+    "        #complile a list of results for summary \n",
+    "        results.append ({\n",
+    "            'File': os.path.basename(data_path),\n",
+    "            'Hours with Capacity Shortage': hours_shortage,\n",
+    "            'Hours with Battery <30%': hours_battery_shortage,\n",
+    "            'SAIDI (hrs outages/year)': hours_unmet_load,\n",
+    "            'Days with Outages': num_days_outages,\n",
+    "            'SAIFI (outages/year)': outages_year,\n",
+    "        \n",
+    "        })\n",
     "\n",
-    "    #Merge hours_per_day and outages_day data frames\n",
-    "    if not hours_per_day.empty and not outages_day.empty:\n",
-    "        merged = pd.merge(hours_per_day, outages_day, on=['month', 'day'], how='outer')\n",
-    "        merged['File'] = os.path.basename(data_path)\n",
-    "        outages_summary.append(merged)\n",
+    "        #Merge hours_per_day and outages_day data frames\n",
+    "        if not hours_per_day.empty and not outages_day.empty:\n",
+    "            merged = pd.merge(hours_per_day, outages_day, on=['month', 'day'], how='outer')\n",
+    "            merged['File'] = os.path.basename(data_path)\n",
+    "            outages_summary.append(merged)\n",
     "\n",
-    "results_df = pd.DataFrame(results)\n",
-    "outages_summary_df = pd.concat(outages_summary, ignore_index=True)\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    outages_summary_df = pd.concat(outages_summary, ignore_index=True)\n",
+    "\n",
+    "    summary_path = os.path.join(results_dir, 'outages_summary_results.csv')\n",
+    "    results_df.to_csv(summary_path, index=False)\n",
+    "\n",
+    "    outages_daily_detail_path = os.path.join(results_dir,'outages_daily_details.csv')\n",
+    "    outages_summary_df.to_csv(outages_daily_detail_path, index=False)\n",
+    "\n",
+    "    messagebox.showinfo(\"Processing Complete\", f\"Results saved to {result_dir}\")\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -738,6 +747,7 @@
     "\n",
     "results_df = pd.DataFrame(results)\n",
     "outages_summary_df = pd.concat(outages_summary, ignore_index=True)\n",
+    "\n",
     "\n"
    ]
   },
