First version of GUI working

--- a/8760_code_GUI.ipynb
+++ b/8760_code_GUI.ipynb
@@ -33,9 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Global Variables\n",
-    "data_files = ''\n",
-    " "
+    "#Define Global Variables \n",
+    "\n",
+    "data_files = ''"
    ]
   },
   {
@@ -147,6 +147,8 @@
     "    # results directory for saving results\n",
     "    results_dir = os.path.join(dir_path, 'results')\n",
     "    os.makedirs(results_dir, exist_ok=True)\n",
+    "\n",
+    "    return data_files\n",
     "    \n",
     "#Keep data files     "
    ]
@@ -268,7 +270,7 @@
       "  File \"c:\\Users\\Nolan Welsh\\miniconda3\\envs\\earth-analytics-python\\Lib\\tkinter\\__init__.py\", line 1967, in __call__\n",
       "    return self.func(*args)\n",
       "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Nolan Welsh\\AppData\\Local\\Temp\\ipykernel_37076\\4250798006.py\", line 84, in process_files\n",
+      "  File \"C:\\Users\\Nolan Welsh\\AppData\\Local\\Temp\\ipykernel_38788\\4250798006.py\", line 84, in process_files\n",
       "    outages_summary_df = pd.concat(outages_summary, ignore_index=True)\n",
       "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"c:\\Users\\Nolan Welsh\\miniconda3\\envs\\earth-analytics-python\\Lib\\site-packages\\pandas\\core\\reshape\\concat.py\", line 382, in concat\n",
@@ -280,18 +282,6 @@
       "  File \"c:\\Users\\Nolan Welsh\\miniconda3\\envs\\earth-analytics-python\\Lib\\site-packages\\pandas\\core\\reshape\\concat.py\", line 507, in _clean_keys_and_objs\n",
       "    raise ValueError(\"No objects to concatenate\")\n",
       "ValueError: No objects to concatenate\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m Button(app, text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProcess Files\u001b[39m\u001b[38;5;124m\"\u001b[39m, command\u001b[38;5;241m=\u001b[39mprocess_files)\u001b[38;5;241m.\u001b[39mpack(pady\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m#Run the program \u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m \u001b[43mapp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Nolan Welsh\\miniconda3\\envs\\earth-analytics-python\\Lib\\tkinter\\__init__.py:1504\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[1;34m(self, n)\u001b[0m\n\u001b[0;32m   1502\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmainloop\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m   1503\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1504\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
